--- a/src/pages/auth/login.css
+++ b/src/pages/auth/login.css
@@ -1,13 +1,14 @@
 .login {
   width: 100%;
   height: 100vh;
-  background: url("/public/images/school.jpg");
-  background-size: cover;
+  background: url("/public/images/bc5ce546-3340-432f-b1fb-8a5d1bc02c25.png");
+  background-size: 50%;
   background-position: center;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: yellow;
+  background-color: #FCFCFCFF;
+  background-repeat: no-repeat;
 }
 
 .login-form {
@@ -18,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  transform: translateX(-300px);
+  transform: translateX(-700px);
 }
 
 .login-form > h1 {
@@ -40,16 +41,17 @@
 
 .login-form > label input {
   width: 100%;
-  height: 40px;
+  height: 50px;
   padding: 0 10px;
   border: none;
   border-radius: 5px;
-  font-size: 16px;
-  color: #333;
+  font-size: 20px;
+  color:black;
+  background: #0bd4a2 !important;
 }
 
 .login-form > label input[type="submit"] {
-  background: #fff;
+  background: #0bd4a2;
   margin-top: 10px;
   font-weight: 700;
   cursor: pointer;
